# VirtualDeviceToolkit

./: CMakeLists.txt  SDRF.sln  SDRF.vcxproj  SDRF.vcxproj.filters
cpp/: OMV.cpp  VDevice.cpp  VProbe.cpp  driver.cpp  drivers.cpp  functions.cpp  sensor.cpp  sensors.cpp  sensors_math.cpp
cpp/utils/: OMV.cpp  UpdateService.cpp  functions.cpp
diagram/: uml.uml
include/: ICamera.hpp  ICamera.tpp  IInputDevice.hpp  IInputDevice.tpp  IProbe.hpp  IProbe.tpp  ImageProbe.hpp  OMV.h  OpenCVCamera.h  VDevice.h  VProbe.h  config.h  driver.h  drivers.h  functions.h  sensor.h  sensors.h
include/utils/: OMV.h  UpdateService.h  functions.h
source/: ImageProbe.cpp  OpenCVCamera.cpp
source/utils/: OMV.cpp  UpdateService.cpp
